--- a/content/config.json
+++ b/content/config.json
@@ -24,19 +24,26 @@
     [
       {"path": "01-introduccion/00-datos.md"},
       {"path": "01-introduccion/01-significado.md"},
-      {"path": "01-introduccion/02-pautas.md"}
+      {"path": "01-introduccion/02-ejemplo.md"},
+      {"path": "01-introduccion/03-pautas.md"}
     ],
     [
       {"path": "02-focus/01-significado.md"},
       {"path": "02-focus/02-significado.md"},
       {"path": "02-focus/03-orden_dom.md"},
-      {"path": "02-focus/04-tabindex.md"}
+      {"path": "02-focus/04-orden_dom.md"},
+      {"path": "02-focus/05-tabindex.md"},
+      {"path": "02-focus/06-skiplinks.md"},
+      {"path": "02-focus/07-keyboard_patterns.md"},
+      {"path": "02-focus/08-offscreen_content.md"},
+      {"path": "02-focus/09-trampas_teclado.md"}
     ],
     [
-      {"path": "03-semantica_basica/01-significado.md"},
-      {"path": "03-semantica_basica/02-lector_pantalla.md"},
-      {"path": "03-semantica_basica/03-arbol_accesibilidad.md"},
-      {"path": "03-semantica_basica/04-alternativas_texto.md"}
+      {"path": "03-semantica_basica/01-tecnologia_asistencia.md"},
+      {"path": "03-semantica_basica/02-semantica.md"},
+      {"path": "03-semantica_basica/03-lector_pantalla.md"},
+      {"path": "03-semantica_basica/04-arbol_accesibilidad.md"},
+      {"path": "03-semantica_basica/05-alternativas_texto.md"}
     ],
     [
       {"path": "04-aria/01-significado.md"},
