--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,8 +7,7 @@ pages:
   script:
     - nvm install
     - nvm use
-    - npm cache verify
-    - npm i
+    - npm ci
     - npm run build
     - mv dist/ public/
   artifacts:
